# Crack-Excel

./: .gitignore  LICENSE  README.md  main.py  old_main.py  pyproject.toml  requirements.txt
backend/: zipHandler.py
unlock_excel/: main.py
unlock_excel/utils/: zip_handler.py
utils/: __init__.py  zip_handler.py
